--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Site de rencontre evenementiel de Nouvelle-Caledonie-nc Amis Jeux Danse Evenement">
   <meta name="author" content="">
+  <meta name="google-site-verification" content="TKZeiFGm7v64Nd0lzCaVr7iGr5AeVmgUkqQpDZQKaUg" />
 
   <title>Home-Friends-Nouvelle-Caledonie-nc</title>
 
